Mon Feb 28 20:30:06 2000  Brian Gough  <bjg@network-theory.co.uk>

	* renamed gsl_sort to gsl_heapsort, since this is more meaningful
 	and gsl_sort, gsl_sort_float, ... is now used for sorting of
 	arrays.

	* added support for sorting of arrays, without going through a
 	gsl_vector object (gsl_sort_vector is now implemented in terms of
 	these functions)

Sat Feb 26 14:47:36 2000  Brian Gough  <bjg@network-theory.co.uk>

	* added support for indirect sorting of objects

	* fixed bug in indirect sorting from use of BASE type instead of
 	size_t for index.

	* reorganized directory

Fri Feb 25 19:30:08 2000  Brian Gough  <bjg@network-theory.co.uk>

	* sortind_source.c: changed return type of indirect sort to int,
 	to allow error return code in case where permutation and vector
 	sizes do not match

Sat Feb 19 12:18:28 2000  Brian Gough  <bjg@network-theory.co.uk>

	* sortind_source.c: added indirect sorting

Fri Feb 18 10:48:24 2000  Brian Gough  <bjg@network-theory.co.uk>

	* initial GPL sources from Thomas Walter
 	<walter@pctc.chemie.uni-erlangen.de>