@@ -1,5 +1,5 @@
-#ifndef GSL_SORT_SHORT_H
-#define GSL_SORT_SHORT_H
+#ifndef __GSL_SORT_SHORT_H__
+#define __GSL_SORT_SHORT_H__
 
 #include <stdlib.h>
 #include <gsl/gsl_errno.h>
@@ -8,4 +8,4 @@
 void gsl_sort_short (short * data, size_t stride, size_t n);
 int gsl_sort_short_index (size_t * p, const short * data, size_t stride, size_t n);
 
-#endif /* GSL_SORT_SHORT_H */
+#endif /* __GSL_SORT_SHORT_H__ */
