@@ -1,5 +1,5 @@
-#ifndef GSL_SORT_ULONG_H
-#define GSL_SORT_ULONG_H
+#ifndef __GSL_SORT_ULONG_H__
+#define __GSL_SORT_ULONG_H__
 
 #include <stdlib.h>
 #include <gsl/gsl_errno.h>
@@ -8,4 +8,4 @@
 void gsl_sort_ulong (unsigned long * data, size_t stride, size_t n);
 int gsl_sort_ulong_index (size_t * p, const unsigned long * data, size_t stride, size_t n);
 
-#endif /* GSL_SORT_ULONG_H */
+#endif /* __GSL_SORT_ULONG_H__ */
