@@ -1,5 +1,5 @@
-#ifndef GSL_SORT_VECTOR_H
-#define GSL_SORT_VECTOR_H
+#ifndef __GSL_SORT_VECTOR_H__
+#define __GSL_SORT_VECTOR_H__
 
 #include <gsl/gsl_sort_vector_long_double.h>
 #include <gsl/gsl_sort_vector_double.h>
@@ -17,4 +17,4 @@
 #include <gsl/gsl_sort_vector_uchar.h>
 #include <gsl/gsl_sort_vector_char.h>
 
-#endif /* GSL_SORT_VECTOR_H */
+#endif /* __GSL_SORT_VECTOR_H__ */
