@@ -1,5 +1,5 @@
-#ifndef GSL_SORT_VECTOR_DOUBLE_H
-#define GSL_SORT_VECTOR_DOUBLE_H
+#ifndef __GSL_SORT_VECTOR_DOUBLE_H__
+#define __GSL_SORT_VECTOR_DOUBLE_H__
 
 #include <stdlib.h>
 #include <gsl/gsl_errno.h>
@@ -9,4 +9,4 @@
 void gsl_sort_vector (gsl_vector * v);
 int gsl_sort_vector_index (gsl_permutation * p, const gsl_vector * v);
 
-#endif /* GSL_SORT_VECTOR_DOUBLE_H */
+#endif /* __GSL_SORT_VECTOR_DOUBLE_H__ */
