@@ -1,5 +1,5 @@
-#ifndef GSL_SORT_VECTOR_FLOAT_H
-#define GSL_SORT_VECTOR_FLOAT_H
+#ifndef __GSL_SORT_VECTOR_FLOAT_H__
+#define __GSL_SORT_VECTOR_FLOAT_H__
 
 #include <stdlib.h>
 #include <gsl/gsl_errno.h>
@@ -9,4 +9,4 @@
 void gsl_sort_vector_float (gsl_vector_float * v);
 int gsl_sort_vector_float_index (gsl_permutation * p, const gsl_vector_float * v);
 
-#endif /* GSL_SORT_VECTOR_FLOAT_H */
+#endif /* __GSL_SORT_VECTOR_FLOAT_H__ */
