@@ -1,5 +1,5 @@
-#ifndef GSL_SORT_VECTOR_INT_H
-#define GSL_SORT_VECTOR_INT_H
+#ifndef __GSL_SORT_VECTOR_INT_H__
+#define __GSL_SORT_VECTOR_INT_H__
 
 #include <stdlib.h>
 #include <gsl/gsl_errno.h>
@@ -9,4 +9,4 @@
 void gsl_sort_vector_int (gsl_vector_int * v);
 int gsl_sort_vector_int_index (gsl_permutation * p, const gsl_vector_int * v);
 
-#endif /* GSL_SORT_VECTOR_INT_H */
+#endif /* __GSL_SORT_VECTOR_INT_H__ */
