@@ -1,5 +1,5 @@
-#ifndef GSL_SORT_VECTOR_SHORT_H
-#define GSL_SORT_VECTOR_SHORT_H
+#ifndef __GSL_SORT_VECTOR_SHORT_H__
+#define __GSL_SORT_VECTOR_SHORT_H__
 
 #include <stdlib.h>
 #include <gsl/gsl_errno.h>
@@ -9,4 +9,4 @@
 void gsl_sort_vector_short (gsl_vector_short * v);
 int gsl_sort_vector_short_index (gsl_permutation * p, const gsl_vector_short * v);
 
-#endif /* GSL_SORT_VECTOR_SHORT_H */
+#endif /* __GSL_SORT_VECTOR_SHORT_H__ */
