@@ -1,5 +1,5 @@
-#ifndef GSL_SORT_VECTOR_UCHAR_H
-#define GSL_SORT_VECTOR_UCHAR_H
+#ifndef __GSL_SORT_VECTOR_UCHAR_H__
+#define __GSL_SORT_VECTOR_UCHAR_H__
 
 #include <stdlib.h>
 #include <gsl/gsl_errno.h>
@@ -9,4 +9,4 @@
 void gsl_sort_vector_uchar (gsl_vector_uchar * v);
 int gsl_sort_vector_uchar_index (gsl_permutation * p, const gsl_vector_uchar * v);
 
-#endif /* GSL_SORT_VECTOR_UCHAR_H */
+#endif /* __GSL_SORT_VECTOR_UCHAR_H__ */
