@@ -1,5 +1,5 @@
-#ifndef GSL_SORT_VECTOR_UINT_H
-#define GSL_SORT_VECTOR_UINT_H
+#ifndef __GSL_SORT_VECTOR_UINT_H__
+#define __GSL_SORT_VECTOR_UINT_H__
 
 #include <stdlib.h>
 #include <gsl/gsl_errno.h>
@@ -9,4 +9,4 @@
 void gsl_sort_vector_uint (gsl_vector_uint * v);
 int gsl_sort_vector_uint_index (gsl_permutation * p, const gsl_vector_uint * v);
 
-#endif /* GSL_SORT_VECTOR_UINT_H */
+#endif /* __GSL_SORT_VECTOR_UINT_H__ */
