@@ -1,5 +1,5 @@
-#ifndef GSL_SORT_VECTOR_ULONG_H
-#define GSL_SORT_VECTOR_ULONG_H
+#ifndef __GSL_SORT_VECTOR_ULONG_H__
+#define __GSL_SORT_VECTOR_ULONG_H__
 
 #include <stdlib.h>
 #include <gsl/gsl_errno.h>
@@ -9,4 +9,4 @@
 void gsl_sort_vector_ulong (gsl_vector_ulong * v);
 int gsl_sort_vector_ulong_index (gsl_permutation * p, const gsl_vector_ulong * v);
 
-#endif /* GSL_SORT_VECTOR_ULONG_H */
+#endif /* __GSL_SORT_VECTOR_ULONG_H__ */
