@@ -1,5 +1,5 @@
-#ifndef GSL_SORT_VECTOR_USHORT_H
-#define GSL_SORT_VECTOR_USHORT_H
+#ifndef __GSL_SORT_VECTOR_USHORT_H__
+#define __GSL_SORT_VECTOR_USHORT_H__
 
 #include <stdlib.h>
 #include <gsl/gsl_errno.h>
@@ -9,4 +9,4 @@
 void gsl_sort_vector_ushort (gsl_vector_ushort * v);
 int gsl_sort_vector_ushort_index (gsl_permutation * p, const gsl_vector_ushort * v);
 
-#endif /* GSL_SORT_VECTOR_USHORT_H */
+#endif /* __GSL_SORT_VECTOR_USHORT_H__ */
